# CAD_CompactStringCompSnort

./: ANALYSIS.md  CMakeLists.txt  EXPERIMENTOS.md  INDEX.md  PROJECT_STATUS.txt  QUICKSTART.md  README.md  SUMMARY.md  plot_results.py  plot_results_simple.py  run_experiments.sh
apresentacao/: apresentacao.aux  apresentacao.nav  apresentacao.out  apresentacao.tex  apresentacao.toc  compila.sh
data/: patterns.txt
include/: aho_corasick.h  config.h  utils.h
juninho-code/: STTGenerator.c
juninho-code/real/: globalReais.cu  texturaReais.cu
juninho-code/sintetica/: compartilhadaSintetico.cu  globalSintetico.cu  redeufs.h  texturaSintetico.cu
results/: README.md  experiment_100kb.csv  experiment_102400kb.csv  experiment_10240kb.csv  experiment_1024kb.csv  experiment_1048576kb.csv  experiment_10kb.csv  experiment_1kb.csv  experiment_512000kb.csv  experiment_51200kb.csv  plot_speedup.gnu  plot_time.gnu  summary_results.csv
src/: aho_corasick_gpu.cu  aho_corasick_serial.c  main.cu  utils.cu
